# happy-kostadin

./: .coveragerc  .gitignore  HISTORY.md  MANIFEST.in  README.md  pull_request_template.md  pyproject.toml  requirements.txt  run_test.sh
.github/workflows/: python-licenses-tests.yml  python-publish.yml
src/happy_kostadin/: __init__.py  cli.py
src/happy_kostadin/get_config/: __init__.py  get_args.py  get_config.py  get_toml_values.py
tests/: test_check_line_endings.py  test_fixing_line_endings.py  test_get_all_files.py
tests/cli/: test_check_line_endings.py
tests/get_config/: test_get_arguments.py  test_get_config.py  test_get_toml_values.py
tests/test_data_crlf/: file_crlf2.txt
tests/test_data_lf/: file_lf2.txt
