[project]
name = "happy_kostadin"
dynamic = ["version"]
dependencies = ["setuptools>=62", "tqdm>=4.66.1", "tomli>=1.1.0; python_version < '3.11'"]
readme = "README.md"
keywords = ["crlf", "lf", "line-ending", "checker"]
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Tom Nijhof", email = "tomsspamadress@gmail.com" }]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.happy_kostadin]
allowed-post-fixes = [
  ".py",
  ".md",
  ".gitignore",
]

[tool.license_scanner]
allowed-licenses = [
  "MIT",
  "apache software license",
  "apache software license v2",
  "apache software license v3",
  "BSD license",
  "BSD 3-clause license",
  "BSD 2-clause license",
  "BSD 0-clause license",
  'GNU lesser general public license',
  'GNU lesser general public license v2',
  'GNU lesser general public license v3',
  'Python software foundation license',
  'Mozilla public license 2.0 (mpl 2.0)',
  "ISC license",
  'mozilla',
]
allowed-packages = ["license_scanner"]

[project.scripts]
happy_kostadin = "happy_kostadin.cli:main"

[tool.hatch.version]
path = "src/happy_kostadin/__init__.py"
